# newton

./: .gitignore  .gitmodules  Cargo.toml  Makefile  flake.nix  launch.sh
crates/client/: Cargo.toml  index.html
crates/client/src/: client.rs  common.rs  lib.rs  main.rs
crates/client/src/client/: assets.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: assets.rs  background.rs  fig.rs  input.rs  main.rs  overlay.rs  terminal.rs  toggle.rs
crates/renderer/src/assets/shaders/automata/: frag.glsl
crates/renderer/src/assets/shaders/background/: frag.glsl  vert.glsl
crates/renderer/src/assets/shaders/color/: frag.glsl
crates/renderer/src/assets/shaders/flat/: frag.glsl
crates/renderer/src/assets/shaders/irish/: frag.glsl
crates/renderer/src/assets/shaders/tcg_base/: frag.glsl
crates/renderer/src/assets/shaders/tcg_effect/: frag.glsl
crates/renderer/src/assets/shaders/tcg_screen/: frag.glsl
crates/renderer/src/assets/shaders/white/: frag.glsl
crates/renderer/src/overlay/: automata.rs  drawing.rs  irish.rs  loopback.rs  mod.rs  model.rs  multi.rs  shader.rs  tcg.rs
crates/server/: Cargo.toml
crates/shader/: Cargo.toml  index.html
crates/shader/src/: lib.rs
crates/shader/src/assets/shaders/throwshade/: frag.glsl
crates/throwshade/: Cargo.toml  index.html
crates/throwshade/src/: lib.rs
crates/throwshade/src/assets/shaders/throwshade/: frag.glsl
src/: lib.rs  main.rs
src/common/: overlay.rs
src/common/overlay/: assets.rs  terminal.rs  throwshade.rs
src/common/overlay/assets/shaders/throwshade/: frag.glsl
src/newton/: client.rs  overlay.rs
src/newton/overlay/: terminal.rs
