[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLLL Colonq <llll@colonq.computer>"]

[workspace.metadata.crane]
name = "newton"

[profile.release]
opt-level = 2
codegen-units = 1
# split-debuginfo = "packed"
strip = true
# debug = "full"

[profile.dev.package."*"]
debug = 0
opt-level = 2

[workspace.dependencies]
# teleia = { git = "https://github.com/lcolonq/teleia" } # engine
teleia = { path = "../teleia/crates/teleia" } # engine