[package]
name = "newton_shader"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
teleia = { git = "https://github.com/lcolonq/teleia" } # engine
glam = "*" # linear algebra
bitflags = "*" # C-style bitwise flags
rand = "=0.8.5" # rng
log = "*" # logging
lazy_static = "*" # global constants
strum = {version = "*", features = ["derive"]} # utility macros for enums
wasm-bindgen = "*" # wasm bindings
wasm-bindgen-futures = "*" # interface with async javascript
cfg-if = "*" # less verbose cfg